/*
 * $Id: ChangeLog,v 1.5266 2006/12/06 17:20:52 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/


2006-12-07 09:01 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * source/rtl/win32ole.prg
  * source/vm/hvm.c
    ! Fixed GPF trap when an INIT procedure uses OLE

2006-12-06 13:20 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * source/ct/datetime3.prg
    * Added save/restore of SetCursor() settings to hb_ShowTimeClock()

2006-12-06 09:45 UTC+0100 Maurilio Longo <maurilio.longo@libero.it>
  ! source/ct/ctmath2.c
    ! floor() and ceiling() were returning an int with a cast from a double
      instead of using hb_retnlen(). Przemyslaw suggested the fix on
      a newsgroup message.

2006-12-02 14:00 UTC-0300 Luiz Rafael Culik<luiz at xharbour.com.br>
  * xharbour.spec
    +bmdbfcdx.a added to file list

2006-12-02 12:10 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
  * source/ct/dattime3.prg
    ! fixed showtime() function that was showing the time if we call
      showtime(), whithout parameters, more than once.

2006-12-01 11:35 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * include/hbextern.ch
    * Protected windows only symbols of CT3 with #ifdef __PLATFORM__Windows
  * utils/xbscript/xbscript.prg
    * Removed define CT3NET and added #ifndef NOCT3 protection for #defiine CT3

2006-12-01 09:45 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
  * makefile.pc
    + added mpr.lib to build xbscript.exe
  * hrbdll.bc
    ! fixed missing ct sources (pack.c and getsecrt.prg)
  * dll_b32.bat
    ! fixed to generate harbour.dll at bin folder instead lib.
  * changelog
    + added missing last entry from Phil Krylov.

2006-11-30 19:31 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * hrbdll.bc
  * hrbdll.vc
  * makefile.vc
    + Added missing ct sources (pack.c and getsecrt.prg)