@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.5266 2006/12/06 17:20:52 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.5267 2006/12/07 13:02:27 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -8,6 +8,9 @@
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
 
+2006-12-07 08:15 UTC-0800 Luis Krause Mantilla <lkrausem /*at*/ shaw /*dot*/ ca>
+  * source/vm/hvm.c
+    ! Fixed build error under BCC5.5 for previous OLE fix
 
 2006-12-07 09:01 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
   * source/rtl/win32ole.prg
